--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* ////////////////////////////// Importing the Font \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 @import url('https://fonts.googleapis.com/css2?family=Germania+One&display=swap');
 
+
 /* ////////////////////////////// Root Styles \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 :root {
     --main-font: 'Germania One', cursive;
@@ -14,6 +15,7 @@
     font-family: var(--main-font);
 }
 
+
 /* ////////////////////////////// Header that displays the title \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .header {
     display: flex;
@@ -25,6 +27,7 @@
     margin-right: 16px;
 }
 
+
 /* ////////////////////////////// button \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .buttons {
     display: flex;
@@ -32,7 +35,12 @@
     margin-top: 16px;
 }
 
-.start-btn {
+button.return {
+    margin: 0 64px;
+    transform: scale(0.8);
+}
+
+.btn {
     padding: 8px 16px;
     border-radius: 8px;
     background-color: #000000;
@@ -42,17 +50,18 @@
     font-size: 24px;
 }
 
-.start-btn:hover {
+.btn:hover {
     box-shadow: 4px 4px 20px 5px rgba(0, 0, 0, 0.335);
     cursor: pointer;
     background-color: #3985ae;
 }
 
+
 /* ////////////////////////////// Container that displays the scores \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .scores {
     display: flex;
     width: 600px;
-    margin: 32px auto;
+    margin: 16px auto 32px auto;
     font-size: 32px;
 }
 
@@ -66,6 +75,12 @@
 
 [class^='player'] > p {
     margin-right: 32px;
+}
+
+
+/* ////////////////////////////// The Main / Game Section \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+main {
+    transform: scale(0.9);
 }
 
 
@@ -98,6 +113,7 @@
 [class^='game-box'] > img {
     width: 75px;
 }
+
 
 /* ////////////////////////////// Container that displays the round \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .round > p {
