--- a/styles/game.css
+++ b/styles/game.css
@@ -15,6 +15,10 @@
     font-family: var(--main-font);
 }
 
+body {
+    background-color: #FFFFFF;
+}
+
 
 /* ////////////////////////////// Header that displays the title \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 .header {
@@ -162,6 +166,31 @@ main {
 }
 
 
+/* ////////////////////////////// Display message \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
+section.display-msg {
+    background-color: #FFFFFF;
+    border: 10px solid #000000;
+    position: absolute;
+    /* z-index: 1; */
+    top: -2rem;
+    left: 16%;
+    width: 60rem;
+    height: 38rem;
+    margin: 0 auto;
+
+}
+
+.hidden {
+    display: none;
+}
+
+section > h2 {
+    text-align: center;
+    font-size: 4rem;
+    padding-top: 16px;
+}
+
+
 /* ////////////////////////////// footer \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ */
 footer {
     position: absolute;
@@ -194,3 +223,4 @@ footer > p > a:active {
 span.heart {
     color: rgb(207, 62, 62);
 }
+
